--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
             </div> 
 
         </div>
-        <div class="container2">
+        <!-- <div class="container2">
             other content
 
-        </div>
+        </div> -->
         
 
     </main>
